# rfc8785.py

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docs.yml  float-tests.yml  lint.yml  release.yml  tests.yml
src/rfc8785/: __init__.py  _impl.py
test/: README.md  conftest.py  test_impl.py  test_init.py
